--- a/styles.css
+++ b/styles.css
@@ -216,7 +216,7 @@ color: rgb(0, 0, 0);
 .classicLogo{
     font-family:Standard;
     font-size: 4vw;
-    margin: 7% 5% 0 5%;
+    margin: 7% 5% 1% 5%;
 }
 
 
