--- a/styles.css
+++ b/styles.css
@@ -240,6 +240,27 @@ color: rgb(0, 0, 0);
         justify-content: center;
         width: 100%;
 }
+
+.classic3{
+    display: grid;
+    column-gap: 3%;
+    row-gap: 5%;
+        grid-template-columns: repeat(3,30%);
+        grid-template-rows: 30% 30% 30%;
+        justify-content: center;
+        width: 100%;
+        margin-top: 1%;
+}
+.classic4{
+    display: grid;
+    column-gap: 3%;
+    row-gap: 2%;
+        grid-template-columns: repeat(3,30%);
+        grid-template-rows: 23% 23% 23% 23%;
+        justify-content: center;
+        width: 100%;
+        margin-top: 1%;
+}
 .classicCard{
     width:100%;
     height:110%;
@@ -623,7 +644,21 @@ grid-gap: 10px;
     grid-template-rows: 50% 50%;
     justify-content: center;
     width: 100%;
-    grid-template-rows: 32% 32% 32%;
+    }
+
+    .classic4{
+        display: grid;
+column-gap: 5%;
+row-gap: 5%;
+height: auto !important;
+margin: 2% 0% 0 0%;
+row-gap: 4%;
+grid-gap: 10px;
+    grid-template-columns: repeat(auto-fill, minmax(40%, 40%));
+    grid-template-rows: 50% 50%;
+    justify-content: center;
+    width: 100%;
+    grid-template-rows: 15% 15% 15% 15% 15%;
     }
     .coffeeName{
         font-size: 6vw;
