--- a/styles.css
+++ b/styles.css
@@ -265,6 +265,16 @@ color: rgb(0, 0, 0);
         width: 100%;
         margin-top: 1%;
 }
+.classic5{
+    display: grid;
+    column-gap: 3%;
+    row-gap: 2%;
+        grid-template-columns: repeat(3,30%);
+        grid-template-rows: 23% 23% 23% 23%;
+        justify-content: center;
+        width: 100%;
+        margin-top: 1%;
+}
 .classicCard{
     width:100%;
     height:110%;
@@ -622,6 +632,12 @@ margin-top:2%;
 
 
   @media (orientation: portrait) {
+    #aslogan{
+    
+        margin:auto 2% auto 62%;
+        
+        font-size: 6vw;
+    }
     body{
         box-shadow: inset 0px 0px 40px 40px #ffffff;
     }
@@ -740,7 +756,7 @@ margin-top:2%;
     row-gap: 2%;
     
         grid-template-columns: repeat(2,45%);
-        grid-template-rows: auto;
+        grid-template-rows: 30% 30% 30%;
         justify-content: center;
         width: 100%;
 }
@@ -750,7 +766,7 @@ margin-top:2%;
     column-gap: 3%;
     row-gap: 5%;
         grid-template-columns: repeat(2,45%);
-        grid-template-rows: min-content auto;
+        grid-template-rows: 20% 20% 20% 20%;
         justify-content: center;
         width: 100%;
         margin-top: 1%;
@@ -762,6 +778,16 @@ margin-top:2%;
     height: auto;
         grid-template-columns: repeat(2,45%);
         grid-template-rows: 18% 18% 18% 18% 18% ;
+        justify-content: center;
+        width: 100%;
+        margin-top: 1%;
+}
+.classic5{
+    display: grid;
+    column-gap: 3%;
+    row-gap: 2%;
+        grid-template-columns: repeat(2,45%);
+        grid-template-rows: 15% 15% 15% 15% 15% 15% ; 
         justify-content: center;
         width: 100%;
         margin-top: 1%;
