--- a/styles.css
+++ b/styles.css
@@ -224,6 +224,16 @@ color: rgb(0, 0, 0);
     margin: 2% 5% 1% 5%;
 }
 
+.classicCake{
+    display: grid;
+    column-gap: 3%;
+    row-gap: 1%;
+        grid-template-columns: repeat(3,30%);
+        grid-template-rows: 25% 25% 25% 25%;
+        justify-content: center;
+        width: 100%;
+        margin-top: 1%;
+}
 
 .classic{
     display: grid;
@@ -277,12 +287,11 @@ color: rgb(0, 0, 0);
 }
 .classicCard{
     width:100%;
-    height:110%;
+    height:auto;
     padding: 0;
     display: flex;
     flex-direction: column;
     font-family:Incendio;
-background-color: white;
 }
 .SiropCard{
     width:auto;
@@ -358,6 +367,14 @@ background-color: white;
             background-color: rgba(255, 255, 255, 0.564);
             border-top: dotted 7px rgb(146, 105, 160);
 }
+.imgCake{
+    height:auto;
+    background-position: 50%,50%; 
+background-size: 100%; 
+background-repeat: no-repeat;
+aspect-ratio: 1 /1;}
+
+
 .imgCoffee{
     height:50%;
     background-position: 50%,50%; 
@@ -373,6 +390,14 @@ background-repeat: no-repeat;
 aspect-ratio: 1 /1;
 background-position:  bottom;
 }
+.descriptionC{
+    height:30%;
+    padding: 0 5%;
+   
+    display: flex;
+    flex-direction: column;
+}
+
 .description{
     height:50%;
     padding: 0 5%;
@@ -384,7 +409,7 @@ background-position:  bottom;
     height:10%;
 }
 .coffeeName{
-    padding: 0 0 0 0;
+    padding: 1%;
     height:auto;
     font-size: 2.6vw;
 }
@@ -402,8 +427,10 @@ background-position:  bottom;
     padding: 3% 1% 0 1%;
     height:auto;
     border:  dashed rgb(33, 25, 12) 2px;
-    vertical-align: middle
+    vertical-align: middle;
+    background-color: white;
     
+
 }
 .coffeeDescription2{
     font-size: 1.3vw;
@@ -741,6 +768,16 @@ margin-top:2%;
                 height:8%;
   }
 
+  .classicCake{
+    display: grid;
+    column-gap: 3%;
+    row-gap: 2%;
+    grid-template-columns: repeat(2,45%);
+    grid-template-rows: auto;
+        justify-content: center;
+        width: 100%;
+        margin-top: 1%;
+}
   .classic{
     display: grid;
     column-gap: 3%;
