--- a/styles.css
+++ b/styles.css
@@ -10,9 +10,9 @@ body{
     height: 100%;
     
 }
-
+/* шапка главной страницы */
 .a{
-    background-image: url("holder.jpg") ;
+    background-image: url("images/holder.jpg") ;
     background-repeat: no-repeat;
     background-position: 50%,50%; 
 background-size: cover; 
@@ -23,8 +23,6 @@ background-size: cover;
     font-family:Incendio;
     position:relative;
 padding-bottom:50px;
-
-
 -webkit-animation-duration: 4s;
 animation-duration: 4s;
 -webkit-animation-fill-mode: both;
@@ -42,7 +40,7 @@ animation-name: fadeIn;
     100% {opacity: 1;}
     }
 .am{
-    background-image: url("Coffee_Lavandula_Cookies_442414_3840x2400.jpg") ;
+    background-image: url("images/Coffee_Lavandula_Cookies_442414_3840x2400.jpg") ;
     background-repeat: no-repeat;
     background-position: 50%,50%; 
 background-size: cover; 
@@ -450,30 +448,30 @@ background-position:  bottom;
 }
 font-face {
 	font-family: 'CzizhBody'; 
-	src: url(ofont.ru_Czizh.ttf); 
+	src: url(fonts/ofont.ru_Czizh.ttf); 
 }
 
 @font-face {
 	font-family: 'Incendio'; 
-	src: url(ofont.ru_Ebbe.ttf); 
+	src: url(fonts/ofont.ru_Ebbe.ttf); 
 }
 @font-face {
 	font-family: 'LavanderiaC'; 
-	src: url(ofont.ru_LavanderiaC.ttf); 
+	src: url(fonts/ofont.ru_LavanderiaC.ttf); 
 }
 @font-face {
 	font-family: 'CaressofSteel'; 
-	src: url(ofont.ru_Caress\ of\ Steel.ttf); 
+	src: url(fonts/ofont.ru_Caress\ of\ Steel.ttf); 
 }
 
 @font-face {
 	font-family: 'Hero'; 
-	src: url(ofont.ru_Hero.ttf); 
+	src: url(fonts/ofont.ru_Hero.ttf); 
 }
 
 @font-face {
 	font-family: 'Standard'; 
-	src: url(ofont.ru_Ebbe\ \(1\).ttf); 
+	src: url(fonts/ofont.ru_Ebbe\ \(1\).ttf); 
 }
 #sliders{
     display: flex;
@@ -549,7 +547,7 @@ a:active {
     background-repeat: no-repeat;
     background-position: center center;
 background-size: cover; 
-    background-image: url("orig.png") ;
+    background-image: url("images/orig.png") ;
     background-position: 50%,50%; 
 background-size: 150%; 
 margin: 1% 30%;
@@ -566,7 +564,7 @@ font-size: 2.5vw;
     background-repeat: no-repeat;
     background-position: center center;
 background-size: cover; 
-    background-image: url("orig.png") ;
+    background-image: url("images/orig.png") ;
     background-position: 50%,50%; 
 background-size: 150%; 
 margin: 1% 30%;
