--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,15 @@
 @font-face {
 	font-family: 'Incendio'; 
-	src: url(fonts/ofont.ru_Incendio.ttf); 
+	src: url(fonts/ofont.ru_Incendio.woff2); 
 }
 @font-face {
 	font-family: 'LavanderiaC'; 
-	src: url(fonts/ofont.ru_LavanderiaC.ttf); 
+	src: url(fonts/ofont.ru_LavanderiaC.woff2); 
 }
 
 @font-face {
 	font-family: 'Standard'; 
-	src: url(fonts/ofont.ru_Standard.ttf); 
+	src: url(fonts/ofont.ru_Standard.woff2); 
 }
 
 
