--- a/styles.css
+++ b/styles.css
@@ -441,6 +441,19 @@ background-position:  bottom;
     
 }
 
+@font-face {
+	font-family: 'Incendio'; 
+	src: url(fonts/ofont.ru_Incendio.ttf); 
+}
+@font-face {
+	font-family: 'LavanderiaC'; 
+	src: url(fonts/ofont.ru_LavanderiaC.ttf); 
+}
+
+@font-face {
+	font-family: 'Standard'; 
+	src: url(fonts/ofont.ru_Standard.ttf); 
+}
 
 #sliders{
     display: flex;
