--- a/styles.css
+++ b/styles.css
@@ -358,7 +358,7 @@ color: rgb(0, 0, 0);
     display: grid;
         column-gap: 5%;
         row-gap: 1%;
-            grid-template-columns: repeat(6,10%);
+            grid-template-columns: 10% 10% 10% 10% 13%;
             grid-template-rows:  100;
             justify-content: center;
             width: auto;
