--- a/styles.css
+++ b/styles.css
@@ -437,7 +437,7 @@ background-position:  bottom;
     padding: 1% 0.2% 0 0.2% ;
     height:auto;
     border:  dashed rgb(33, 25, 12) 2px;
-    vertical-align: middle
+    vertical-align: middle;
     
 }
 
