--- a/styles.css
+++ b/styles.css
@@ -300,11 +300,13 @@ color: rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
     font-family:LavanderiaC;
+    transition: 0.5s; /* Время эффекта */
     
 }
 
 
 .SiropCard:hover{
+    transform: scale(1.1); /* Увеличиваем масштаб */
 }
 .vseSiropy{
     display: grid;
@@ -904,9 +906,11 @@ margin-top:2%;
 
     .SiropCard{
         font-family:LavanderiaC;
+        transition: 0.5s; /* Время эффекта */
     }
 
     .SiropCard:hover{
+        transform: scale(1.1); /* Увеличиваем масштаб */
     }
 
     .coffeeName2{
