--- a/styles.css
+++ b/styles.css
@@ -270,7 +270,7 @@ color: rgb(0, 0, 0);
     column-gap: 3%;
     row-gap: 2%;
         grid-template-columns: repeat(3,30%);
-        grid-template-rows: 23% 23% 23% 23%;
+        grid-template-rows: 30% 30% 30%;
         justify-content: center;
         width: 100%;
         margin-top: 1%;
