--- a/styles.css
+++ b/styles.css
@@ -865,7 +865,7 @@ margin-top:2%;
     row-gap: 2%;
     height: auto;
         grid-template-columns: repeat(2,45%);
-        grid-template-rows: 18% 18% 18% 18% 18% ;
+        grid-template-rows: 23% 23% 23% 23%;
         justify-content: center;
         width: 100%;
         margin-top: 1%;
